# ImageQualityEnhancement

./: ReadMe
contrast/2DHE/: 1.cpp  2dhe.cpp  2dhe.hpp  ReadMe.txt
contrast/BPBE/: 1.cpp  ReadMe.txt  bpbe.cpp  bpbe.hpp
contrast/Entropy-Based-Contrast-Enhancement/: .EntropyBasedContrastEnhancement.cpp.swp  .main.cpp.swp  EntropyBasedContrastEnhancement.cpp  EntropyBasedContrastEnhancement.hpp  ReadMe.txt  main.cpp
contrast/HazeRemoval/: HazeRemoval.cpp  ReadMe.txt
contrast/Local_Laplacian_Filter/: LaplacianPyramid.cpp  ReadMe.txt  RemappingFunction.cpp  RemappingFunction.h
contrast/WeightedLeastSquaresFilter/: 1.py  wls.py
contrast/contrast_adjust_1/: contrast_adjust.cpp  contrast_adjust.hpp  light_adjust.cpp  light_adjust.hpp
contrast/musica/: ReadMe.txt  musica.cpp
contrast/pchip/: pchip.cpp  pchip.hpp
contrast/pyr_contrast/: pyr_contrast.hpp
contrast/sharpen/: 1.cpp  multiscalesharpen.cpp  usm.cpp
data/input/: hdr_out_rgb_wb.raw
denoise/: ReadMe.txt
denoise/Uformer/: requirements.txt  tmp.py
denoise/anisotropic/: 1.cpp  Makefile  anisotropic.cpp  anisotropic.hpp  aos_anisotropic.cpp  aos_anisotropic.hpp  myBin  ori_anisotropic.cpp  ori_anisotropic.hpp
denoise/bilateral/: 1.cpp  avg_blur.cpp  bilateral_grid.cpp  bilateral_grid.hpp  bilateral_lut.cpp  myBin  (+10 more)
fusion/: ReadMe.txt
ltm/: ReadMe.txt
other/akaze/: CMakeLists.txt  README.md
other/akaze/akaze/: akaze_features.cpp  akaze_features.h  akaze_nldiffusion_functions.h  akaze_utils.h
raw_operate/: main.cpp  utils.cpp  utils.hpp
registration/: ReadMe.txt
test/: 1.cpp
(+969 files in other folders)
